# vtkio

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
assets/: RectilinearGrid.pvtr  RectilinearGridAppendedBase64.vtr  RectilinearGridCompressed.vtr  RectilinearGridInlineBinary.vtr  RectilinearGridRawBinary.vtr  RectilinearGrid_ascii.vtr  box.vtu  box_para.vtu  cube.pvtp  cube.vtk  cube.vtp  cube.vtu  cube_complex.vtk  cube_complex_topo.vtk  cube_compressed.pvtu  dodecagon.vtk  dodecagon_ascii.vtk  dodecagon_ascii_simple.vtk  dodecagon_simple.vtk  field.vtk  hexahedron_ascii.vtu  hexahedron_inline_binary.vtu  hexahedron_lz4.vtu  hexahedron_lz4_inline_binary.vtu  hexahedron_lzma_inline_binary.vtu  hexahedron_parallel.pvtu  hexahedron_parallel_0.vtu  hexahedron_parallel_lzma.pvtu  hexahedron_parallel_lzma_0.vtu  hexahedron_zlib.vtu  hexahedron_zlib_binary.vtu  hexahedron_zlib_inline_binary.vtu  hexahedron_zlib_para.vtu  para_test.vtk  para_test_ascii.vtk  para_tet.vtk  para_tet_ascii.vtk  point.vtp  point_ascii.vtp  point_cloud.vtk  (+17 more)
assets/RectilinearGrid/: RectilinearGrid_0.vtr
assets/cube_compressed/: cube_compressed_0.vtu
assets/pygmsh/: ascii.vtk  ascii.vtu  binary.vtk  gen.py  lzma.vtu  no-compression.vtu  zlib.vtu
src/: basic.rs  buffer.rs  lib.rs  macros.rs  model.rs  parser.rs  reinterpret.rs  writer.rs  xml.rs
src/examples/: mod.rs  vertex.rs
src/xml/: de.rs  se.rs
src/xml/se/: var.rs
tests/: legacy.rs  pygmsh.rs  vtkio.rs  xml.rs
