[package]
name = "vtkio"
version = "0.6.3"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Parser and writer for the legacy VTK file format"
readme = "README.md"
edition = "2018"

homepage = "https://github.com/elrnv/vtkio"
repository = "https://github.com/elrnv/vtkio"
documentation = "https://docs.rs/vtkio"

keywords = ["vtk", "parser", "writer", "io", "mesh"]

[badges]
travis-ci = { repository = "elrnv/vtkio", branch = "master" }

[dependencies]
# need verbose errors because of feature leak in dependencies:
# https://github.com/rust-lang/cargo/issues/1796
# remove this feature after the above issue is resolved
nom = { version = "3", features = ["verbose-errors"] }
num-traits = "0.2"
num-derive = "0.3"
byteorder = "1.3"
base64 = "0.13"
bytemuck = { version = "1.5", features = ["extern_crate_alloc"] }
lz4 = { package = "lz4_flex", version = "0.7", optional = true }
flate2 = { version = "1.0.19", optional = true }
xz2 = { version = "0.1.6", optional = true }
quick-xml = { version = "0.22", features = ["serialize"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
tokio = { version = "1.3", features = ["fs", "io-util"], optional = true }

[features]
default = ["xml", "compression"]
async = ["tokio"]
compression = ["lz4", "xz2", "flate2"]
xml = ["quick-xml", "serde"]
unstable = []
