[package]
name = "vtkio"
version = "0.7.0"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Parser and writer for the legacy VTK file format"
readme = "README.md"
edition = "2021"

homepage = "https://github.com/elrnv/vtkio"
repository = "https://github.com/elrnv/vtkio"
documentation = "https://docs.rs/vtkio"

keywords = ["vtk", "parser", "writer", "io", "mesh"]

[badges]
travis-ci = { repository = "elrnv/vtkio", branch = "master" }

[dependencies]
nom = "7"
num-traits = "0.2"
num-derive = "0.4"
byteorder = "1.3"
base64 = "0.21"
bytemuck = { version = "1.5", features = ["extern_crate_alloc"] }
lz4 = { package = "lz4_flex", version = "0.10", optional = true }
flate2 = { version = "1.0.19", optional = true }
xz2 = { version = "0.1.6", optional = true } # LZMA
# quick-xml = { path = "../quick-xml", features = ["serialize", "binary"], optional = true }
quick-xml = { version = "0.28", features = ["serialize"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
tokio = { version = "1.3", features = ["fs", "io-util"], optional = true }
rayon = { version = "1.0", optional = true }
log = "0.4"

[dev-dependencies]
regex = "1.0"
pretty_assertions = "1.0"
env_logger = "0.10"

[features]
default = ["xml", "compression"]
async = ["tokio"]
compression = ["lz4", "xz2", "flate2"]
parallel = ["rayon"]
xml = ["quick-xml", "serde"]
binary = []
unstable = []
