[package]
name = "vtkio"
version = "0.7.0-rc1"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Parser and writer for the legacy VTK file format"
readme = "README.md"
edition = "2021"

homepage = "https://github.com/elrnv/vtkio"
repository = "https://github.com/elrnv/vtkio"
documentation = "https://docs.rs/vtkio"

keywords = ["vtk", "parser", "writer", "io", "mesh"]

[dependencies]
nom = "7"
num-traits = "0.2"
num-derive = "0.4"
byteorder = "1.3"
base64 = "0.22"
bytemuck = { version = "1.5", features = ["extern_crate_alloc"] }
lz4 = { package = "lz4_flex", version = "0.11", optional = true }
flate2 = { version = "1.0.19", optional = true }
# quick-xml = { path = "../quick-xml", features = ["serialize"], optional = true }
quick-xml = { git = "https://github.com/elrnv/quick-xml.git", branch = "binary-support4", version = "0.36", features = ["serialize"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
tokio = { version = "1.3", features = ["fs", "io-util"], optional = true }
rayon = { version = "1.0", optional = true }
log = "0.4"
trim-in-place = "0.1"

[dev-dependencies]
regex = "1.0"
pretty_assertions = "1.0"
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
liblzma = { version = "0.3.4", features = ["wasm"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
liblzma = { version = "0.3.4", optional = true }

[features]
default = ["xml", "compression"]
async = ["tokio"]
compression = ["lz4", "liblzma", "flate2"]
parallel = ["rayon"]
xml = ["quick-xml", "serde"]
# binary = []
